--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <h1 class="display-3 text-center">Work Day Scheduler</h1>
             <p class="lead text-center">A simple calendar app for scheduling your work day</p>
             <p id="today" class="lead"></p>
-            <p>
-            <input id="toggle-duration" type="checkbox" checked data-toggle="toggle" data-on="12 Hours" data-off="8 Hours" data-onstyle="success" data-offstyle="primary">
+            <p id="toggle">
+            <input id="toggle" type="checkbox" checked data-toggle="toggle" data-on="12 Hours" data-off="8 Hours" data-onstyle="success" data-offstyle="primary">
             </p>
         </header>
         <div id="schedule" class="container"></div>
