--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <body>
         <header class="jumbotron">
             <h1 class="display-3 text-center">Work Day Scheduler</h1>
-            <p class="lead text-center">A simple calendar app for scheduling your work day</p>
-            <p id="today" class="lead"></p>
+            <p class="lead sub text-center">A simple calendar app for scheduling your work day</p>
+            <p id="today" class="lead date"></p>
             <p id="toggle">
-            <input id="toggle" type="checkbox" checked data-toggle="toggle" data-on="8 Hours" data-off="12 Hours" data-onstyle="success" data-offstyle="primary">
+            <input id="toggleButton" type="checkbox" checked data-toggle="toggle" data-on="8 Hours" data-off="12 Hours" data-onstyle="light" data-offstyle="secondary">
             </p>
         </header>
         <div id="schedule" class="container"></div>
