--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
         <header class="jumbotron">
-            <h1 class="display-3 text-center">Work Day Scheduler</h1>
+            <h1 class="display-3 title text-center">Work Day Scheduler</h1>
             <p class="lead sub text-center">A simple calendar app for scheduling your work day</p>
             <p id="today" class="lead date"></p>
             <p id="toggle">
