--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+        <link href="https://fonts.googleapis.com/css2?family=Play:wght@700&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">         
+        <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+
         <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/style.css" />
         <title>Work Day Scheduler</title>
@@ -15,8 +19,8 @@
 
     <body>
         <header class="jumbotron">
-            <h1 class="display-3 title text-center">Work Day Scheduler</h1>
-            <p class="lead sub text-center">A simple calendar app for scheduling your work day</p>
+            <h1 class="display-3 title text-center">Day Scheduler</h1>
+            <p class="lead sub text-center">A simple calendar app to schedule you'r day</p>
             <p id="today" class="lead date"></p>
             <p id="toggle">
             <input id="toggleButton" type="checkbox" checked data-toggle="toggle" data-on="8 Hours" data-off="12 Hours" data-onstyle="light" data-offstyle="secondary">
