--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/style.css" />
-        <title>Work Day Scheduler</title>
+        <title>Day Scheduler</title>
     </head>
 
     <body>
