--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <header class="jumbotron">
             <h1 class="display-3 title text-center">Day Scheduler</h1>
-            <p class="lead sub text-center">A simple calendar app to schedule you'r day</p>
+            <p class="lead sub text-center">A simple calendar app to schedule your day.</p>
             <p id="today" class="lead date"></p>
             <p id="toggle">
             <input id="toggleButton" type="checkbox" checked data-toggle="toggle" data-on="8 Hours" data-off="12 Hours" data-onstyle="light" data-offstyle="secondary">
