--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
 
-        <link href="https://fonts.googleapis.com/css2?family=Play:wght@700&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">         
-        <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Play:wght@700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet" />
 
-        <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+        <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="./assets/css/style.css" />
         <title>Day Scheduler</title>
     </head>
@@ -23,7 +23,7 @@
             <p class="lead sub text-center">A simple calendar app to schedule your day.</p>
             <p id="today" class="lead date"></p>
             <p id="toggle">
-            <input id="toggleButton" type="checkbox" checked data-toggle="toggle" data-on="8 Hours" data-off="12 Hours" data-onstyle="light" data-offstyle="secondary">
+                <input id="toggleButton" type="checkbox" checked data-toggle="toggle" data-on="8 Hours" data-off="12 Hours" data-onstyle="light" data-offstyle="secondary" />
             </p>
         </header>
         <div id="schedule" class="container"></div>
@@ -33,6 +33,6 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
         <script src="./assets/js/script.js"></script>
- <!--   <script src="./assets/js/script2.js"></script> -->
+        <!--   <script src="./assets/js/script2.js"></script> -->
     </body>
 </html>
